--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,6 @@
 <html>
 <head>
-  <style>
-    /* you can style your program here */
-  </style>
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
   <main></main>
