--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/scrollbar.css">
+  <link rel="stylesheet" href="/assets/css/icons.css">
 </head>
 <body>
   <main></main>
