--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/scrollbar.css">
   <link rel="stylesheet" href="/assets/css/icons.css">
+  <link rel="stylesheet" href="/assets/css/login.css">
+  <link rel="stylesheet" href="/assets/css/chat.css">
 </head>
 <body>
   <main></main>
