--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="/assets/css/icons.css">
   <link rel="stylesheet" href="/assets/css/login.css">
   <link rel="stylesheet" href="/assets/css/chat.css">
+  <link rel="stylesheet" href="/assets/css/profile.css">
 </head>
 <body>
   <main></main>
