add css for chatview

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/assets/css/login.css">
   <link rel="stylesheet" href="/assets/css/chat.css">
   <link rel="stylesheet" href="/assets/css/profile.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <main></main>
